<resources>

    <!--APPLICATION STRINGS-->
    <string name="app_name">Guild Wars 2 API Viewer</string>

    <!--CREDENTIALS-->
    <!--Note: Add your Guild Wars 2 API key to app_api_key.-->
    <string name="app_api_key"></string>

    <!--MENU STRINGS-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="character">Character</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>

    <!--LOGIN STRINGS-->
    <string name="login_description">Please input a valid Guild Wars 2 API key to view account-specific data.\nYou can acquire a Guild Wars 2 API key at:\n\nhttps://account.arena.net/applications</string>
    <string name="login_api_key_field">API Key</string>

    <!--CHARACTER STRINGS-->
    <string name="character_name">NAME:\u0020</string>
    <string name="character_race">RACE:\u0020</string>
    <string name="character_gender">GENDER:\u0020</string>
    <string name="character_profession">PROFESSION:\u0020</string>
    <string name="character_level">LEVEL:\u0020</string>
    <string name="character_guild">GUILD:\u0020</string>
    <string name="character_age">AGE:\u0020</string>
    <string name="character_created">CREATED:\u0020</string>
    <string name="character_deaths">DEATHS:\u0020</string>

    <!--QUAGGANS STRINGS-->
    <string name="quaggans">Quaggans</string>

    <!--SERVER STATUS STRINGS-->
    <string name="retry">Retry</string>
    <string name="server_status">Server Status</string>
    <string name="world">WORLD</string>
    <string name="world_id">ID:\u0020</string>

</resources>
