...

                    </android.support.design.widget.TextInputLayout>

                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="@dimen/login_button_width"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_below="@+id/login_api_key_field_container"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
...
